--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,18 +22,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Initialize
-        run: cd src
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+          cache-dependency-path: ./src/package-lock.json
 
       - name: Install
-        run: npm ci
+        run: cd src && npm ci
 
       - name: Update
         run: npm run update
