fix: cache save path

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -65,5 +65,5 @@ jobs:
         uses: actions/cache/save@v4
         if: env.changes == 'true'
         with:
-          path: ./src/workdir
+          path: ./.github/source/workdir
           key: workdir-cache
